gitops/argocd/argocd-gtw.nginx-fabric.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway-doordress
  namespace: gateway-infra
spec:
  gatewayClassName: nginx-gateway
  infrastructure:
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-type: "external"
      service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
      service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
      service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
      service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
      service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:722249351142:certificate/e19f1d72-44f4-4dea-aba9-cd251fccf404"
      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
  listeners:
  - name: https
    protocol: HTTPS 
    port: 443
    hostname: "*.doordress.us"
    allowedRoutes:
      namespaces:
        from: Same
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.doordress.us"
    allowedRoutes:
      namespaces:
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-nginx-gateway-route
  namespace: argocd
spec:
  parentRefs:
  - name: nginx-gateway-doordress
    namespace: gateway-infra
    sectionName: https
  hostnames:
  - "argocd.doordress.us"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: argocd-server
        namespace: argocd
        port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-nginx-gateway-route-redirect
  namespace: argocd
spec:
  parentRefs:
  - name: nginx-gateway-doordress
    namespace: gateway-infra
    sectionName: http
  hostnames:
  - "argocd.doordress.us"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https   # Upgrades the scheme to https
        statusCode: 301 # Permanent redirect

---
