gitops/argocd/argocd-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # if using cert-manager
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Since TLS ends at NLB
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.doordress.us
      secretName: argocd-tls  # Secret that stores TLS cert
  rules:
  - host: argocd.doordress.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
